# bazel_issue_5978

./: AndroidManifest.xml  BUILD.bazel  README.md  WORKSPACE
tools/: bazel.rc
