android_binary(
    name = "sample",
    custom_package = "NONAME",
    manifest = "AndroidManifest.xml",
    deps = [
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)

java_runtime(
    name = "absolute_javabase",
    java_home = "$(ABSOLUTE_JAVABASE)",
    visibility = ["//visibility:public"],
)
